fix: about us subtitle is too small

--- a/src/styles/about.scss
+++ b/src/styles/about.scss
@@ -13,6 +13,9 @@
 		h1 {
 			font-size: 6rem;
 		}
+		p {
+			font-size: 2rem;
+		}
 	}
 	.carousel-item {
 		height: 50vh;
